# testclutch

./: .editorconfig  .gitignore  MANIFEST.in  README.md  metadata.md  pyproject.toml
.github/workflows/: python.yml
examples/: comment-pr  daily-update  testclutchrc
prometheus/data/: .gitignore
prometheus/data/user/: testclutch.html
testclutch/: __init__.py  analysis.py  argparsing.py  config.py  configdef.py  db.py  filedef.py  gitdef.py  log.py  logcache.py  logdef.py  netreq.py  prdef.py  pyplatform.py  summarize.py  testcasedef.py  uname.py  urls.py
testclutch/augment/: __init__.py  curldailyinfo.py
testclutch/cli/: analysissum.py  analyzepr.py  augmentcurldaily.py  augmentgithash.py  dbutil.py  findtestruns.py  gitcommitinfo.py  ingestlog.py  metadatastats.py  querytests.py
testclutch/ingest/: appveyor.py  appveyorapi.py  azure.py  azureapi.py  circleci.py  circleciapi.py  cirrus.py  cirrusapi.py  curlauto.py  curlautoapi.py  gha.py  ghaapi.py  logprefix.py  msbuild.py  prappveyor.py  prazure.py  prcircleci.py  prcirrus.py  prgha.py
testclutch/logparser/: automakeparse.py  curlparse.py  logparse.py  pytestparse.py  unittestparse.py
tests/: context.py  test_analysis.py  test_analyzepr.py  test_automake.py  test_curldailyinfo.py  test_curlparse.py  test_ghaapi.py  test_gitcommitinfo.py  test_ingest_gha.py  test_ingestlog.py  test_logparse.py  test_logprefix.py  test_metadatastats.py  test_msbuild.py  test_netreq.py  test_prdef.py  test_pyplatform.py  test_pytestparse.py  test_querytests.py  test_uname.py  test_unittest.py  test_urls.py  unittest_generate.py  util.py
tests/data/: curldailyinfo_basic.tar.xz  curldailyinfo_commit.tar.xz
tests/data/test.git/: description  packed-refs
tests/data/test.git/info/: refs
tests/data/test.git/objects/info/: commit-graph  packs
tests/data/test.git/objects/pack/: pack-4d6f69df0c869731a293424cdd8b04436c697442.bitmap  pack-4d6f69df0c869731a293424cdd8b04436c697442.idx  pack-4d6f69df0c869731a293424cdd8b04436c697442.pack
