[build-system]
requires = [
    "setuptools>=42",
]
build-backend = "setuptools.build_meta"

[project]
name = "testclutch"
description = "System to track and analyze regression test runs from CI services"
version = "0.1dev"
readme = "README.md"
authors = [{name = "Dan Fandrich", email = "dan@telarity.com"}]
license = {text = "AGPLv3+"}
classifiers = [
    "Programming Language :: Python",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
requires-python = ">=3.8,<3.13"
dependencies = [
    "requests >= 2.25.1, <= 2.31.0",
    "zstd >= 1.4.5.1, <= 1.5.5.1",
]

[project.optional-dependencies]
test = [
    "pytest >= 6.1.5, <= 8.0.0"
]
dev = [
    "flake8 >= 5.0.4, <= 7.0.0",
    "flake8-builtins",
    "flake8-import-order",
    "flake8-pyproject",
    "pytype >= 2023.9.19, <= 2024.2.13"
]

[project.urls]
Homepage = "https://github.com/dfandrich/testclutch"

[project.scripts]
tcanalysissum = "testclutch.cli.analysissum:main"
tcanalyzepr = "testclutch.cli.analyzepr:main"
tcaugmentcurldaily = "testclutch.cli.augmentcurldaily:main"
tcaugmentgithash = "testclutch.cli.augmentgithash:main"
tcdbutil = "testclutch.cli.dbutil:main"
tcfindtestruns = "testclutch.cli.findtestruns:main"
tcgitcommitinfo = "testclutch.cli.gitcommitinfo:main"
tcingestlog = "testclutch.cli.ingestlog:main"
tclogparse = "testclutch.logparser.logparse:main"
tcmetadatastats = "testclutch.cli.metadatastats:main"
tcquerytests = "testclutch.cli.querytests:main"

[tool.setuptools]
license-files = ["COPYING"]
include-package-data = false

[tool.setuptools.packages.find]
namespaces = false
include = [
    "testclutch",
    "testclutch.cli",
    "testclutch.augment",
    "testclutch.ingest",
    "testclutch.logparser"
]

# flake8-pyproject must be installed for flake8 to use these settings
[tool.flake8]
ignore = ["W503", "E741", "E501"]
max-line-length = 100
max-complexity = 25
